--- a/guardrails/maturity-analysis/config/survey_questions.yaml
+++ b/guardrails/maturity-analysis/config/survey_questions.yaml
@@ -388,6 +388,19 @@ section5_budget:
       - 予算執行の柔軟性がない
       - 特に困っていない
       - その他
+  
+  # Q7: 必要な支援
+  - id: s5_q7
+    question: "予算・コスト管理で、どんな支援があれば役立ちますか？"
+    type: multiple_choice
+    options:
+      - 予算申請テンプレート・ガイドライン
+      - クラウドコスト見積もりツール
+      - IT投資の費用対効果評価の支援
+      - 予算計画策定の相談窓口
+      - 他部門の予算事例・ベンチマーク情報
+      - コスト最適化のベストプラクティス共有
+      - その他
 
 # ============================================================================
 # セクション6: ベンダー・外部サービス
